# AgentHowl

./: .gitignore  CLAUDE.md  Makefile  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/agent/: __init__.py  agent_player.py  decisions.py  llm_client.py  memory.py  prompts.py
backend/app/api/: deps.py  rest.py  ws.py
backend/app/cli/: bot.py  play.py  play_human.py  render.py  simulate.py
backend/app/engine/: actions.py  config.py  engine.py  events.py  observation.py  phases.py  resolver.py  rng.py  state.py
backend/app/runtime/: connection.py  defaults.py  game_runner.py  player_port.py  registry.py
backend/app/schemas/: actions.py  games.py
backend/app/store/: __init__.py  event_store.py
backend/tests/: conftest.py  factories.py  llm_helpers.py  test_acceptance_m25.py  test_actions.py  test_agent_bench.py  test_agent_decisions.py  test_agent_integration.py  test_agent_llm_client.py  test_agent_memory.py  test_agent_player.py  test_agent_prompts.py  test_agent_smoke.py  test_api_e2e.py  test_api_lobby.py  test_api_play.py  test_api_ws.py  test_badge_flow.py  test_badge_lost.py  test_cli_play_human.py  test_cli_play_watch.py  test_cli_render.py  test_cli_smoke.py  test_config.py  test_connection.py  test_determinism.py  test_election_timeline.py  test_engine_core.py  test_event_store.py  test_events.py  test_fail_loud.py  test_game_runner.py  test_human_port.py  test_hunter.py  test_idiot.py  test_isolation.py  test_last_words.py  test_llm_deps.py  test_night_resolution.py  test_observation_fields.py  (+18 more)
docs/specs/: requirements.md
docs/superpowers/plans/: 2026-07-05-m1-rule-engine.md  2026-07-06-sheriff-speech-direction.md  2026-07-06-wolf-kill-rule.md  2026-07-07-badge-flow.md  2026-07-07-fail-loud.md  2026-07-07-pk-speech.md  2026-07-07-selfdestruct-skip-day.md  2026-07-07-sheriff-elected-strip-incumbent.md  2026-07-07-withdraw.md  2026-07-08-badge-lost-event.md  2026-07-08-election-stage-events.md  2026-07-08-rng-decorrelate.md  2026-07-12-event-store.md  2026-07-13-game-runner.md  2026-07-15-api-layer.md  2026-07-16-agent-layer.md  2026-07-17-cli-viewer-player.md  2026-07-17-m25-acceptance.md
docs/superpowers/specs/: 2026-07-05-m1-rule-engine-design.md  2026-07-06-sheriff-speech-direction-design.md  2026-07-06-wolf-kill-rule-design.md  (+15 more)
