[project]
name = "agenthowl-backend"
version = "0.1.0"
description = "AgentHowl 狼人杀游戏平台后端 — 规则引擎、运行时与 Agent 层"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.139.0",
    "instructor>=1.15.4",
    "litellm>=1.92.0",
    "orjson>=3.11.9",
    "pydantic>=2.6",
    "uvicorn>=0.51.0",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.43.51",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8",
    "pytest-asyncio>=1.4.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI 依赖注入惯用法：Depends(...) 在参数默认值中求值是框架约定，非可变默认值陷阱
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["litellm", "litellm.*", "instructor", "instructor.*"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "smoke: 真模型冒烟测试（需 AGENTHOWL_SMOKE_MODEL 环境变量且 Ollama 端点可达）",
]
